# ros2_trial_packages

first_pkg/: package.xml  setup.py
first_pkg/first_pkg/: first_node.py  robot_news_station.py  smartphone.py  verify_new_interface.py
my_cpp_pkg/: package.xml
my_cpp_pkg/src/: my_first_node.cpp  robot_news_station.cpp  smartphone.cpp
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: number_app.yaml  robot_app_params.yaml
my_robot_bringup/launch/: number_app.launch.py  number_app.launch.xml  robot_news_station.launch.xml  turtle_game.launch.xml
my_robot_py/: package.xml  setup.py
my_robot_py/launch/: robot_gazebo.launch.py
my_robot_py/urdf/: my_robot.urdf
my_robot_py/worlds/: empty.sdf
ros2_custom_interfaces/: CMakeLists.txt  package.xml
ros2_custom_interfaces/msg/: LedPanelState.msg  NextLocation.msg  ReachedTarget.msg
ros2_custom_interfaces/srv/: SetLedState.srv
ros2_pub_sub/: package.xml  setup.py
ros2_pub_sub/ros2_pub_sub/: number_counter.py  number_publisher.py
ros2_services/: package.xml  setup.cfg  setup.py
ros2_services/ros2_services/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  battery_node.py  led_panel_node.py
ros2_services_cpp/: CMakeLists.txt  package.xml
ros2_services_cpp/src/: add_two_ints_client.cpp  add_two_ints_client_oop.cpp  add_two_ints_server.cpp
turtlegame/: package.xml  setup.cfg  setup.py
turtlegame/turtlegame/: turtle_controller_node.py  turtle_spawner.py
